aplicando buenas practicas - sonarqube