@@ -16,12 +16,13 @@ import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/payments")
 @CrossOrigin(origins = "http://localhost:4200")
 public class PaymentController {
+
+    private static final String MSG_NOT_FOUND = "Payment no encontrado";
 
     private final PaymentService paymentService;
     private final OrderService orderService;
@@ -60,14 +61,14 @@ public class PaymentController {
         List<Payment> payments = paymentService.listarPayments();
         List<PaymentDTO> paymentsDTO = payments.stream()
                 .map(PaymentDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(ApiResponse.success(paymentsDTO));
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<ApiResponse<PaymentDTO>> getPaymentById(@PathVariable("id") Integer id) {
         Payment payment = paymentService.obtenerPorId(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Payment no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException(MSG_NOT_FOUND));
 
         validarAccesoAPago(payment);
 
@@ -94,7 +95,7 @@ public class PaymentController {
         try {
             payment.setStatus(Payment.PaymentStatus.valueOf(paymentDTO.getStatus()));
         } catch (IllegalArgumentException | NullPointerException e) {
-            throw new BadRequestException("Estado de pago inválido");
+            throw new BadRequestException("Estado de pago invÃ¡lido");
         }
 
         payment.setTransactionId(paymentDTO.getTransactionId());
@@ -103,7 +104,7 @@ public class PaymentController {
         validarAccesoAPago(payment);
 
         Payment paymentCreado = paymentService.crearPayment(payment);
-        return new ResponseEntity<>(ApiResponse.success(new PaymentDTO(paymentCreado), "Payment creado con éxito"),
+        return new ResponseEntity<>(ApiResponse.success(new PaymentDTO(paymentCreado), "Payment creado con Ã©xito"),
                 HttpStatus.CREATED);
     }
 
@@ -118,17 +119,17 @@ public class PaymentController {
         try {
             payment.setStatus(Payment.PaymentStatus.valueOf(paymentDTO.getStatus()));
         } catch (IllegalArgumentException | NullPointerException e) {
-            throw new BadRequestException("Estado de pago inválido");
+            throw new BadRequestException("Estado de pago invÃ¡lido");
         }
 
         payment.setTransactionId(paymentDTO.getTransactionId());
 
         Payment paymentActualizado = paymentService.actualizarPayment(id, payment);
         if (paymentActualizado == null) {
-            throw new ResourceNotFoundException("Payment no encontrado");
+            throw new ResourceNotFoundException(MSG_NOT_FOUND);
         }
         return ResponseEntity
-                .ok(ApiResponse.success(new PaymentDTO(paymentActualizado), "Payment actualizado con éxito"));
+                .ok(ApiResponse.success(new PaymentDTO(paymentActualizado), "Payment actualizado con Ã©xito"));
     }
 
     @DeleteMapping("/{id}")
@@ -139,7 +140,8 @@ public class PaymentController {
         } catch (RuntimeException e) {
             throw e;
         } catch (Exception e) {
-            throw new ResourceNotFoundException("Payment no encontrado");
+            throw new ResourceNotFoundException(MSG_NOT_FOUND);
         }
     }
 }
+
