@@ -12,12 +12,14 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/payment-methods")
 @CrossOrigin(origins = "http://localhost:4200")
 public class PaymentMethodController {
+
+    private static final String MSG_KEY = "message";
+    private static final String MSG_NOT_FOUND = "MÃ©todo de pago no encontrado";
 
     private final PaymentMethodService paymentMethodService;
 
@@ -35,12 +37,12 @@ public class PaymentMethodController {
                     dto.setInUse(inUseIds.contains(pm.getId()));
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> obtenerPorId(@PathVariable("id") Integer id) {
+    public ResponseEntity<Object> obtenerPorId(@PathVariable("id") Integer id) {
         Optional<PaymentMethod> paymentMethod = paymentMethodService.obtenerPorId(id);
         if (paymentMethod.isPresent()) {
             PaymentMethodDTO dto = new PaymentMethodDTO(paymentMethod.get());
@@ -48,7 +50,7 @@ public class PaymentMethodController {
             return ResponseEntity.ok(ApiResponse.success(dto));
         }
         return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", "M\u00e9todo de pago no encontrado"));
+                .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
     }
 
     @GetMapping("/active")
@@ -61,16 +63,16 @@ public class PaymentMethodController {
                     dto.setInUse(inUseIds.contains(pm.getId()));
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @PostMapping
-    public ResponseEntity<?> crearMetodoPago(@RequestBody PaymentMethodDTO paymentMethodDTO) {
+    public ResponseEntity<Object> crearMetodoPago(@RequestBody PaymentMethodDTO paymentMethodDTO) {
         try {
             if (paymentMethodService.existsByName(paymentMethodDTO.getName())) {
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                        .body(Map.of("message", "El nombre del m\u00e9todo de pago ya existe"));
+                        .body(Map.of(MSG_KEY, "El nombre del mÃ©todo de pago ya existe"));
             }
 
             PaymentMethod paymentMethod = new PaymentMethod();
@@ -83,12 +85,12 @@ public class PaymentMethodController {
             return ResponseEntity.ok(ApiResponse.success(new PaymentMethodDTO(nuevoMetodo)));
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", e.getMessage()));
+                    .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> actualizarMetodoPago(@PathVariable("id") Integer id, @RequestBody PaymentMethodDTO paymentMethodDTO) {
+    public ResponseEntity<Object> actualizarMetodoPago(@PathVariable("id") Integer id, @RequestBody PaymentMethodDTO paymentMethodDTO) {
         try {
             PaymentMethod paymentMethodActualizado = new PaymentMethod();
             paymentMethodActualizado.setName(paymentMethodDTO.getName());
@@ -103,30 +105,30 @@ public class PaymentMethodController {
                 return ResponseEntity.ok(ApiResponse.success(dto));
             }
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "M\u00e9todo de pago no encontrado"));
+                    .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", e.getMessage()));
+                    .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> eliminarMetodoPago(@PathVariable("id") Integer id) {
+    public ResponseEntity<Object> eliminarMetodoPago(@PathVariable("id") Integer id) {
         try {
             boolean eliminado = paymentMethodService.eliminarMetodoPago(id);
             if (eliminado) {
-                return ResponseEntity.ok(ApiResponse.success(Map.of("message", "M\u00e9todo de pago eliminado correctamente")));
+                return ResponseEntity.ok(ApiResponse.success(Map.of(MSG_KEY, "MÃ©todo de pago eliminado correctamente")));
             }
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "M\u00e9todo de pago no encontrado"));
+                    .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
         } catch (IllegalArgumentException e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("message", e.getMessage()));
+                    .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @PatchMapping("/{id}/status")
-    public ResponseEntity<?> cambiarEstado(
+    public ResponseEntity<Object> cambiarEstado(
             @PathVariable("id") Integer id, 
             @RequestParam("active") boolean active) {
         PaymentMethod paymentMethod = paymentMethodService.cambiarEstado(id, active);
@@ -134,6 +136,7 @@ public class PaymentMethodController {
             return ResponseEntity.ok(ApiResponse.success(new PaymentMethodDTO(paymentMethod)));
         }
         return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", "M\u00e9todo de pago no encontrado"));
+                .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
     }
 }
+
