@@ -14,12 +14,14 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/reviews")
 @CrossOrigin(origins = "http://localhost:4200")
 public class ReviewController {
+
+    private static final String MSG_KEY = "message";
+    private static final String MSG_NOT_FOUND = "Review no encontrado";
 
     private final ReviewService reviewService;
     
@@ -35,57 +37,57 @@ public class ReviewController {
         List<Review> reviews = reviewService.listarReviews();
         List<ReviewDTO> reviewsDTO = reviews.stream()
             .map(ReviewDTO::new)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(ApiResponse.success(reviewsDTO));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> obtenerReviewPorId(@PathVariable("id") Integer id) { // Corregido
+    public ResponseEntity<Object> obtenerReviewPorId(@PathVariable("id") Integer id) {
         Optional<Review> reviewOpt = reviewService.obtenerPorId(id);
         if (reviewOpt.isPresent()) {
             ReviewDTO reviewDTO = new ReviewDTO(reviewOpt.get());
             return ResponseEntity.ok(ApiResponse.success(reviewDTO));
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", "Review no encontrado"));
+                .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
         }
     }
 
     @GetMapping("/order/{orderId}")
-    public ResponseEntity<ApiResponse<List<ReviewDTO>>> obtenerReviewsPorOrderId(@PathVariable("orderId") Integer orderId) { // Corregido
+    public ResponseEntity<ApiResponse<List<ReviewDTO>>> obtenerReviewsPorOrderId(@PathVariable("orderId") Integer orderId) {
         List<Review> reviews = reviewService.obtenerPorOrderId(orderId);
         List<ReviewDTO> reviewsDTO = reviews.stream()
             .map(ReviewDTO::new)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(ApiResponse.success(reviewsDTO));
     }
 
     @GetMapping("/user/{userId}")
-    public ResponseEntity<?> obtenerReviewsPorUserId(@PathVariable("userId") Integer userId) { // Corregido
-        // Validar que el cliente solo pueda ver sus propias rese\u00f1as
+    public ResponseEntity<Object> obtenerReviewsPorUserId(@PathVariable("userId") Integer userId) {
+        // Validar que el cliente solo pueda ver sus propias reseÃ±as
         if (!securityUtils.isAdmin()) {
             Integer currentUserId = securityUtils.getCurrentUserId();
             if (currentUserId == null || !userId.equals(currentUserId)) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "No tienes permiso para ver estas rese\u00f1as"));
+                    .body(Map.of(MSG_KEY, "No tienes permiso para ver estas reseÃ±as"));
             }
         }
         
         List<Review> reviews = reviewService.obtenerPorUserId(userId);
         List<ReviewDTO> reviewsDTO = reviews.stream()
             .map(ReviewDTO::new)
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(ApiResponse.success(reviewsDTO));
     }
 
     @PostMapping
-    public ResponseEntity<?> crearReview(@Valid @RequestBody ReviewDTO reviewDTO) {
+    public ResponseEntity<Object> crearReview(@Valid @RequestBody ReviewDTO reviewDTO) {
         try {
             if (!securityUtils.isAdmin()) {
                 Integer currentUserId = securityUtils.getCurrentUserId();
                 if (currentUserId == null || !currentUserId.equals(reviewDTO.getUserId())) {
                     return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                        .body(Map.of("message", "No puedes crear reseñas para otros usuarios"));
+                        .body(Map.of(MSG_KEY, "No puedes crear reseÃ±as para otros usuarios"));
                 }
             }
             
@@ -100,17 +102,17 @@ public class ReviewController {
             return ResponseEntity.status(HttpStatus.CREATED).body(ApiResponse.success(new ReviewDTO(reviewCreado), "Creado exitosamente"));
         } catch (RuntimeException e) { throw e; } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body(Map.of("message", e.getMessage()));
+                .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> actualizarReview(@PathVariable("id") Integer id, @Valid @RequestBody ReviewDTO reviewDTO) { // Corregido
+    public ResponseEntity<Object> actualizarReview(@PathVariable("id") Integer id, @Valid @RequestBody ReviewDTO reviewDTO) {
         try {
             Optional<Review> reviewOpt = reviewService.obtenerPorId(id);
             if (reviewOpt.isEmpty()) {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "Review no encontrado"));
+                    .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
             }
             
             Review existingReview = reviewOpt.get();
@@ -119,7 +121,7 @@ public class ReviewController {
                 Integer currentUserId = securityUtils.getCurrentUserId();
                 if (currentUserId == null || !currentUserId.equals(existingReview.getUserId())) {
                     return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                        .body(Map.of("message", "No tienes permiso para editar esta rese\u00f1a"));
+                        .body(Map.of(MSG_KEY, "No tienes permiso para editar esta reseÃ±a"));
                 }
             }
             
@@ -137,17 +139,17 @@ public class ReviewController {
             return ResponseEntity.ok(ApiResponse.success(new ReviewDTO(reviewActualizado)));
         } catch (RuntimeException e) { throw e; } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", e.getMessage()));
+                .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> eliminarReview(@PathVariable("id") Integer id) { // Corregido
+    public ResponseEntity<Object> eliminarReview(@PathVariable("id") Integer id) {
         try {
             Optional<Review> reviewOpt = reviewService.obtenerPorId(id);
             if (reviewOpt.isEmpty()) {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("message", "Review no encontrado"));
+                    .body(Map.of(MSG_KEY, MSG_NOT_FOUND));
             }
             
             Review existingReview = reviewOpt.get();
@@ -156,47 +158,48 @@ public class ReviewController {
                 Integer currentUserId = securityUtils.getCurrentUserId();
                 if (currentUserId == null || !currentUserId.equals(existingReview.getUserId())) {
                     return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                        .body(Map.of("message", "No tienes permiso para eliminar esta rese\u00f1a"));
+                        .body(Map.of(MSG_KEY, "No tienes permiso para eliminar esta reseÃ±a"));
                 }
             }
             
             reviewService.eliminarReview(id);
-            return ResponseEntity.ok(ApiResponse.success(Map.of("message", "Review eliminado correctamente")));
+            return ResponseEntity.ok(ApiResponse.success(Map.of(MSG_KEY, "Review eliminado correctamente")));
         } catch (RuntimeException e) { throw e; } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", e.getMessage()));
+                .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @PatchMapping("/{id}/desactivar")
-    public ResponseEntity<?> desactivarReview(@PathVariable("id") Integer id) { // Corregido
+    public ResponseEntity<Object> desactivarReview(@PathVariable("id") Integer id) {
         try {
             if (!securityUtils.isAdmin()) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "No tienes permiso para desactivar rese\u00f1as"));
+                    .body(Map.of(MSG_KEY, "No tienes permiso para desactivar reseÃ±as"));
             }
             
             Review reviewActualizado = reviewService.desactivarReview(id);
             return ResponseEntity.ok(ApiResponse.success(new ReviewDTO(reviewActualizado)));
         } catch (RuntimeException e) { throw e; } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", e.getMessage()));
+                .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 
     @PatchMapping("/{id}/activar")
-    public ResponseEntity<?> activarReview(@PathVariable("id") Integer id) { // Corregido
+    public ResponseEntity<Object> activarReview(@PathVariable("id") Integer id) {
         try {
             if (!securityUtils.isAdmin()) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "No tienes permiso para activar rese\u00f1as"));
+                    .body(Map.of(MSG_KEY, "No tienes permiso para activar reseÃ±as"));
             }
             
             Review reviewActualizado = reviewService.activarReview(id);
             return ResponseEntity.ok(ApiResponse.success(new ReviewDTO(reviewActualizado)));
         } catch (RuntimeException e) { throw e; } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body(Map.of("message", e.getMessage()));
+                .body(Map.of(MSG_KEY, e.getMessage()));
         }
     }
 }
+
